--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -8,6 +8,6 @@
     <script src="../js/index.js" defer></script>
   </head>
   <body>
-    <h1>JS Starter Kit</h1>
+    <h1>Welcome to JS Starter Kit</h1>
   </body>
 </html>
